--- a/imageuploader.css
+++ b/imageuploader.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:100&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 body
 {
     margin: 0;
@@ -7,16 +7,16 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: poppins;
     background-image: linear-gradient(to right, #B2FEFA, #0ED2F7);
 }
-
 .preview
 {
     position: relative;
-    margin-top: 80px;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 30px;
     align-items: center;
     border-radius: 10px;
     width: 400px;
@@ -24,31 +24,26 @@ body
     background-color: whitesmoke;
     transition: transform 0.5s;
 }
-
 .preview:hover, .preview:focus {
     box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
                 rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
                 rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
     transform: translateY(-0.5em);
 }
-
 #output
 {
     width:200px;
     height:200px;
 }
-
 .desc
 {
     position: absolute;
     top: 270px;  
 }
-
 input[type="file"]
 {
     display: none;
 }
-
 label
 {
     color: #eb8934;
@@ -64,13 +59,11 @@ label
     box-shadow: inset 0 0 0 0 #eb8934;
     transition: ease-out 0.8s;
 }
-
 label:hover
 {
     box-shadow: inset 400px 50px 0 0 #eb8934;
     color: white;
 }
-
 .container {
     width: 40px;
     height: 40px;
@@ -82,13 +75,11 @@ label:hover
     justify-content: center;
     align-items: center;
 }
-
 .center {
     width: 180px;
     height: 60px;
     position: absolute;
 }
-
 .btn {
     width: 70px;
     height: 30px;
@@ -99,7 +90,6 @@ label:hover
     outline: none;
     transition: 1s ease-in-out;
 }
-
 svg {
     position: absolute;
     left: 0;
@@ -110,18 +100,19 @@ svg {
     stroke-dashoffset: 146;
     transition: 1s ease-in-out;
 }
-
 .btn:hover {
     transition: 1s ease-in-out;
     background: #eb8934;
     color: white;
 }
-
 .btn:hover svg {
     stroke-dashoffset: -480;
 }
-
 .btn span {
     font-size: 10px;
     font-weight: 100;
+}
+#result {
+    font-size: 2em;
+    color: orange;
 }
